--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
 
   mysql:
     image: mysql:5.7.22
-    container_name: unless-stopped
+    container_name: mysql
     tty: true
     ports:
       - "3306:3306"
